crates/compiler/src/tests/e2e/good/0378_basic_bindings_and_print/main.gom
fn main() {
    let s = "hello\nworld";
    println(s);
    let s2 = "tab\there";
    println(s2);
}
